edit homepage banner styling // fix problem of text overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -74,7 +74,9 @@
   }
 
   /* Buttons */
-
+  .landingpage-buttons {
+    @apply bg-primary hover:bg-secondary inline-block rounded-xl px-6 py-2 text-xs font-medium uppercase leading-tight text-white shadow-md duration-150 ease-in-out hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg active:transition;
+  }
   .modal-deleteButton {
     @apply bg-primary my-0 w-full flex-grow justify-center rounded-full border-none  bg-secondary-color py-2 text-xs uppercase text-white  outline-none xl:w-[250px];
   }
